<?xml version="1.0" encoding="utf-8"?>
<!-- LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

</LinearLayout -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--Service State-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/tvServiceState" style="@style/labelStyleRight"/>
            <TextView android:id="@+id/serviceState_info" style="@style/textStyle"/>
        </LinearLayout>

        <!--cell location -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/tvCellLocation" style="@style/labelStyleRight"/>
            <TextView android:id="@+id/cellLocation_info" style="@style/textStyle"/>
        </LinearLayout>

        <!--Call State-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/tvCallState" style="@style/labelStyleRight"/>
            <TextView android:id="@+id/callState_info" style="@style/textStyle"/>
        </LinearLayout>

        <!--Data Connection State-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/tvConnState" style="@style/labelStyleRight"/>
            <TextView android:id="@+id/connectionState_info" style="@style/textStyle"/>
        </LinearLayout>

        <!--Signal level -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/tvSignalLevel" style="@style/labelStyleRight"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">
                <ProgressBar android:id="@+id/signalLevel" style="@style/progressStyle"/>
                <TextView android:id="@+id/signalLevelInfo" style="@style/textSmallStyle"/>
            </LinearLayout>
        </LinearLayout>

        <!--Data Activity-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/strData" style="@style/labelStyleRight"/>
            <ImageView android:id="@+id/dataDirection" style="@style/imageStyle"/>
        </LinearLayout>

        <TextView android:id="@+id/device_info" style="@style/labelStyleLeft"/>

    </LinearLayout>

</ScrollView>
